fixing alignment of sidebar menus with main content

--- a/css/_caw_styles.scss
+++ b/css/_caw_styles.scss
@@ -323,7 +323,7 @@ body, .header, .site-main-menu, .main {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 1.5em;
-  margin-top: -3px;
+  margin-top: 0px;
   border-top: 0;
   @include border-radius(3px);
   @include  box-shadow(3px 3px 10px rgba(0, 0, 0, 0.2));
